--- a/suite-native/module-passphrase/package.json
+++ b/suite-native/module-passphrase/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@react-navigation/native": "6.1.10",
         "@react-navigation/native-stack": "6.9.18",
+        "@suite-common/icons": "workspace:*",
         "@suite-common/validators": "workspace:*",
         "@suite-common/wallet-constants": "workspace:*",
         "@suite-native/atoms": "workspace:*",
@@ -20,6 +21,7 @@
         "@suite-native/navigation": "workspace:*",
         "@trezor/styles": "workspace:*",
         "react": "18.2.0",
-        "react-native": "0.73.6"
+        "react-native": "0.73.6",
+        "react-native-reanimated": "3.7.0-nightly-20240101-9d365ae7b"
     }
 }
