--- a/.github/workflows/connect-test.yml
+++ b/.github/workflows/connect-test.yml
@@ -313,7 +313,7 @@ jobs:
         firmware: ["2.2.0", "2-main"]
       fail-fast: false
 
-  other models:
+  other-models:
     needs: [build]
     # if: github.event_name == 'schedule'
     uses: ./.github/workflows/template-connect-test-params.yml
