--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -1,20 +1,20 @@
 name: mv/experiment
 on: push
 jobs:
-  job1:
+  create-nightly-matrix:
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - id: set-matrix
-        # run: echo "::set-output name=matrix::{\"include\":[{\"project\":\"foo\",\"config\":\"Debug\"},{\"project\":\"bar\",\"config\":\"Release\"}]}"
-        run: echo "matrix={\"include\":[{\"project\":\"foo\",\"config\":\"Debug\"},{\"project\":\"bar\",\"config\":\"Release\"}]}" >> $GITHUB_OUTPUT
+        # run: echo "matrix={\"include\":[{\"project\":\"foo\",\"config\":\"Debug\"},{\"project\":\"bar\",\"config\":\"Release\"}]}" >> $GITHUB_OUTPUT
+        run: ls -la && echo $(node ./experiment.js) >> $GITHUB_OUTPUT
 
-  job2:
+  test:
     needs: job1
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{fromJson(needs.job1.outputs.matrix)}}
+      matrix: ${{fromJson(needs.create-nightly-matrix.outputs.matrix)}}
     steps:
       - run: echo ${{ matrix.project }}
       - run: echo ${{ matrix.config }}
