fixup! fixup! wip2

--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - id: set-matrix
         # run: echo "matrix={\"include\":[{\"project\":\"foo\",\"config\":\"Debug\"},{\"project\":\"bar\",\"config\":\"Release\"}]}" >> $GITHUB_OUTPUT
-        run: ls -la && echo $(node ./experiment.js) >> $GITHUB_OUTPUT
+        run: ls -la && echo $(node ./ci/scripts/experiment.js) >> $GITHUB_OUTPUT
 
   test:
     needs: create-nightly-matrix
