fixup! fixup! fixup! fixup! fixup! fixup! wip2

--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v4
       - id: set-matrix
         # run: echo "matrix={\"include\":[{\"project\":\"foo\",\"config\":\"Debug\"},{\"project\":\"bar\",\"config\":\"Release\"}]}" >> $GITHUB_OUTPUT
-        run: echo "{$(node ./ci/scripts/experiment.js)}" >> $GITHUB_OUTPUT
+        run: echo "(node ./ci/scripts/experiment.js) >> $GITHUB_OUTPUT
 
   test:
     needs: create-nightly-matrix
