--- a/.github/workflows/suite-native_production_ci.yml
+++ b/.github/workflows/suite-native_production_ci.yml
@@ -6,10 +6,9 @@ on:
       PLATFORM:
         type: choice
         options:
-          - All
           - iOS
           - Android
-          - Android APK
+          - Both
         description: Select platform to run build
         required: true
 
@@ -25,7 +24,7 @@ jobs:
     env:
       EXPO_PUBLIC_ENVIRONMENT: production
       SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-    if: ${{ github.event.inputs.PLATFORM == 'iOS' || github.event.inputs.PLATFORM == 'All' && github.repository == 'trezor/trezor-suite'}}
+    if: ${{ github.event.inputs.PLATFORM == 'iOS' || github.event.inputs.PLATFORM == 'Both' }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -54,7 +53,7 @@ jobs:
     env:
       EXPO_PUBLIC_ENVIRONMENT: production
       SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-    if: ${{ github.event.inputs.PLATFORM == 'Android' || github.event.inputs.PLATFORM == 'All' && github.repository == 'trezor/trezor-suite' }}
+    if: ${{ github.event.inputs.PLATFORM == 'Android' || github.event.inputs.PLATFORM == 'Both' }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -76,31 +75,3 @@ jobs:
           --auto-submit
           --message ${{ github.sha }}
         working-directory: suite-native/app
-  androidAPK:
-      name: Build Android APK to GH releases
-      environment: production
-      runs-on: ubuntu-latest
-      env:
-        EXPO_PUBLIC_ENVIRONMENT: production
-        SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-      if: ${{ github.event.inputs.PLATFORM == 'Android APK' || github.event.inputs.PLATFORM == 'All' }}
-      steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-node@v4
-          with:
-            node-version-file: ".nvmrc"
-            cache: yarn
-        - name: Setup EAS
-          uses: expo/expo-github-action@v8
-          with:
-            eas-version: latest
-            token: ${{ secrets.EXPO_TOKEN }}
-        - name: Install libs
-          run: yarn install
-        - name: Build on EAS Android
-          run: eas build
-            --platform android
-            --profile productionAPK
-            --non-interactive
-            --message ${{ github.sha }}
-          working-directory: suite-native/app
