--- a/suite-native/module-settings/package.json
+++ b/suite-native/module-settings/package.json
@@ -41,6 +41,7 @@
         "jotai": "1.9.1",
         "react": "18.2.0",
         "react-native": "0.73.6",
+        "react-native-svg": "14.1.0",
         "react-redux": "8.0.7"
     }
 }
