--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -10,6 +10,6 @@ nodeLinker: node-modules
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-outdated.cjs
-    spec: "https://mskelton.dev/yarn-outdated/v3"
+    spec: "https://go.mskelton.dev/yarn-outdated/v4"
 
 yarnPath: .yarn/releases/yarn-4.1.1-git.20240411.hash-c64644a.cjs
