--- a/.github/workflows/release-connect-npm.yml
+++ b/.github/workflows/release-connect-npm.yml
@@ -14,7 +14,10 @@ on:
 jobs:
   deploy-npm-beta:
     environment: npm-packages
-    uses: ./.github/workflows/template-release-connect-npm.yml
-    with:
-      deploymentType: beta
-      packageName: ${{ github.event.inputs.package }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to NPM ${{ github.event.inputs.package }}
+        uses: ./.github/workflows/template-release-connect-npm.yml
+        with:
+          deploymentType: beta
+          packageName: ${{ github.event.inputs.package }}
