fix(github): checkout repo befor using template

--- a/.github/workflows/release-connect-npm-dependencies.yml
+++ b/.github/workflows/release-connect-npm-dependencies.yml
@@ -29,6 +29,10 @@ jobs:
     environment: npm-packages
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
       - name: Deploy to NPM ${{ github.event.inputs.package }}
         uses: ./.github/workflows/template-release-connect-npm.yml
         with:
