--- a/.github/workflows/release-connect-npm.yml
+++ b/.github/workflows/release-connect-npm.yml
@@ -21,7 +21,7 @@ jobs:
           submodules: recursive
 
       - name: Deploy to NPM ${{ github.event.inputs.package }}
-        uses: ./.github/workflows/template-release-connect-npm.yml
+        uses: ./.github/actions/release-connect-npm@develop
         with:
           deploymentType: beta
           packageName: ${{ github.event.inputs.package }}
