--- a/.github/workflows/release-connect-npm-dependencies.yml
+++ b/.github/workflows/release-connect-npm-dependencies.yml
@@ -31,10 +31,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: recursive
+          ref: develop
 
       - name: Deploy to NPM ${{ github.event.inputs.package }}
-        uses: ./.github/actions/release-connect-npm/action.yml@develop
+        uses: ./.github/actions/release-connect-npm
         with:
           deploymentType: beta
           packageName: ${{ github.event.inputs.package }}
