--- a/.github/workflows/release-connect-npm-dependencies.yml
+++ b/.github/workflows/release-connect-npm-dependencies.yml
@@ -34,6 +34,8 @@ jobs:
           ref: develop
 
       - name: Deploy to NPM ${{ github.event.inputs.package }}
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         uses: ./.github/actions/release-connect-npm
         with:
           deploymentType: beta
