--- a/.github/workflows/release-connect-npm.yml
+++ b/.github/workflows/release-connect-npm.yml
@@ -21,6 +21,8 @@ jobs:
           ref: develop
 
       - name: Deploy to NPM ${{ github.event.inputs.package }}
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         uses: ./.github/actions/release-connect-npm
         with:
           deploymentType: beta
