--- a/packages/connect-explorer-nextra/package.json
+++ b/packages/connect-explorer-nextra/package.json
@@ -4,10 +4,10 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "dev": "next",
+        "dev": "concurrently \"next -p 8088\" \"PORT=8089 yarn workspace @trezor/connect-popup dev\"",
+        "dev:explorer": "next -p 8088",
         "build": "next build && rm -rf build && mv out build",
         "build:webextension": "BUILD_TARGET=webextension yarn build && yarn g:rimraf build-webextension && TS_NODE_PROJECT=\"tsconfig.json\" yarn webpack --config ./webpack/webextension.webpack.config.ts && bash ./webpack/replace-next-filenames.sh",
-        "start": "next start",
         "lint:js": "yarn g:eslint '**/*{.ts,.tsx}'",
         "lint:styles": "npx stylelint './src/**/*{.ts,.tsx}' --cache --config ../../.stylelintrc",
         "type-check": "yarn g:tsc --build tsconfig.json",
@@ -26,6 +26,7 @@
         "@trezor/theme": "workspace:^",
         "@trezor/utils": "workspace:^",
         "babel-plugin-styled-components": "^2.1.4",
+        "concurrently": "^8.2.2",
         "copy-webpack-plugin": "^12.0.2",
         "html-webpack-plugin": "^5.6.0",
         "next": "^14.1.1",
