--- a/packages/connect-explorer-nextra/package.json
+++ b/packages/connect-explorer-nextra/package.json
@@ -25,10 +25,6 @@
         "@trezor/schema-utils": "workspace:^",
         "@trezor/theme": "workspace:^",
         "@trezor/utils": "workspace:^",
-        "babel-plugin-styled-components": "^2.1.4",
-        "concurrently": "^8.2.2",
-        "copy-webpack-plugin": "^12.0.2",
-        "html-webpack-plugin": "^5.6.0",
         "next": "^14.1.1",
         "next-mdx-remote": "^4.4.1",
         "next-themes": "^0.2.1",
@@ -42,13 +38,17 @@
         "redux": "^4.2.1",
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.4.2",
-        "styled-components": "^6.1.8",
-        "webpack": "^5.90.1",
-        "webpack-cli": "^5.1.4"
+        "styled-components": "^6.1.8"
     },
     "devDependencies": {
         "@types/redux-logger": "^3.0.11",
+        "babel-plugin-styled-components": "^2.1.4",
+        "concurrently": "^8.2.2",
+        "copy-webpack-plugin": "^12.0.2",
         "eslint-plugin-mdx": "^3.1.5",
-        "tsx": "^4.7.1"
+        "html-webpack-plugin": "^5.6.0",
+        "tsx": "^4.7.1",
+        "webpack": "^5.90.1",
+        "webpack-cli": "^5.1.4"
     }
 }
