--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
         "html-webpack-plugin": "^5.6.0",
         "@types/node": "18.17.15",
         "@types/react": "18.2.55",
-        "@sentry/types": "7.92.0"
+        "@sentry/types": "7.92.0",
+        "bn.js": "5.2.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.23.9",
