--- a/.github/workflows/build-desktop-apps.yml
+++ b/.github/workflows/build-desktop-apps.yml
@@ -42,7 +42,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
-          submodules: recursive
+          submodules: true
       - name: Install node and yarn
         uses: actions/setup-node@v4
         with:
@@ -99,7 +99,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
-          submodules: recursive
+          submodules: true
       - name: Install node and yarn
         uses: actions/setup-node@v4
         with:
