--- a/.github/workflows/connect-pre-release-init.yml
+++ b/.github/workflows/connect-pre-release-init.yml
@@ -9,6 +9,7 @@ on:
         options:
           - patch
           - minor
+          - beta
 
 concurrency:
   group: ${{ github.workflow }}-$${{ github.head_ref || github.run_id }}
