--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@trezor/protocol",
-    "version": "1.0.8-beta.1",
+    "version": "1.0.8",
     "license": "See LICENSE.md in repo root",
     "repository": {
         "type": "git",
