--- a/packages/react-native-usb/android/src/main/AndroidManifest.xml
+++ b/packages/react-native-usb/android/src/main/AndroidManifest.xml
@@ -4,10 +4,21 @@
     <application>
         <receiver
             android:name=".ReactNativeUsbAttachedReceiver"
-            android:exported="true">
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".ReactNativeUsbDetachedReceiver"
+            android:exported="false">
+            <intent-filter>
                 <action android:name="android.hardware.usb.action.USB_DEVICE_DETACHED" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".ReactNativeUsbPermissionReceiver" android:exported="false">
+            <intent-filter>
+                <action android:name="io.trezor.rnusb.USB_PERMISSION" />
             </intent-filter>
         </receiver>
     </application>
