ci: run connect-webextensions tests for changes in connect-popup too

--- a/.github/workflows/connect-dev-release-test.yml
+++ b/.github/workflows/connect-dev-release-test.yml
@@ -19,6 +19,7 @@ on:
       - "packages/connect-explorer/**"
       - "packages/connect-webextension/**"
       - "packages/connect-web/**"
+      - "packages/connect-popup/**",
       - "packages/transport/**"
       - "packages/utxo-lib/**"
       - "packages/utils/**"
