feat(suite-native):  re-request usb permission on Connect&Unlock screen

--- a/suite-native/module-connect-device/tsconfig.json
+++ b/suite-native/module-connect-device/tsconfig.json
@@ -18,6 +18,9 @@
         { "path": "../link" },
         { "path": "../navigation" },
         { "path": "../../packages/connect" },
+        {
+            "path": "../../packages/react-native-usb"
+        },
         { "path": "../../packages/styles" }
     ]
 }
