--- a/suite-native/module-connect-device/package.json
+++ b/suite-native/module-connect-device/package.json
@@ -26,6 +26,7 @@
         "@suite-native/link": "workspace:*",
         "@suite-native/navigation": "workspace:*",
         "@trezor/connect": "workspace:*",
+        "@trezor/react-native-usb": "workspace:*",
         "@trezor/styles": "workspace:*",
         "react": "18.2.0",
         "react-native": "0.73.6",
