--- a/docker/docker-compose.suite-dev.yml
+++ b/docker/docker-compose.suite-dev.yml
@@ -4,7 +4,7 @@
 version: "3.9"
 services:
   trezor-user-env-unix:
-    image: ghcr.io/trezor/trezor-user-env
+    image: ghcr.io/trezor/trezor-user-env@sha256:8ff129e1147c98cc35fbc04d7635f3760a28ef3e8aae2633fa8392784ee584b9
     environment:
       - DISPLAY=$DISPLAY
       - QT_X11_NO_MITSHM=1
