--- a/packages/connect-explorer-nextra/package.json
+++ b/packages/connect-explorer-nextra/package.json
@@ -14,6 +14,7 @@
         "convert-old-docs": "yarn tsx scripts/convert-old-docs.ts --all"
     },
     "dependencies": {
+        "@codemirror/state": "^6.4.1",
         "@hbsnow/rehype-sectionize": "^1.0.7",
         "@sinclair/typebox": "^0.31.28",
         "@trezor/components": "workspace:^",
@@ -25,6 +26,10 @@
         "@trezor/schema-utils": "workspace:^",
         "@trezor/theme": "workspace:^",
         "@trezor/utils": "workspace:^",
+        "@uiw/react-codemirror": "^4.21.25",
+        "codemirror-json-schema": "^0.7.0",
+        "codemirror-json5": "^1.0.3",
+        "json5": "^2.2.3",
         "next": "^14.1.1",
         "next-mdx-remote": "^4.4.1",
         "next-themes": "^0.2.1",
