--- a/.github/workflows/connect-dev-release-test.yml
+++ b/.github/workflows/connect-dev-release-test.yml
@@ -59,7 +59,7 @@ jobs:
     with:
       test-name: methods.test
       DEV_SERVER_HOSTNAME: dev.suite.sldev.cz
-      run-webextension: true
+      run-webextension: ${{ github.event_name == 'schedule' }}
       build-overview: true
 
   popup-close:
@@ -113,6 +113,8 @@ jobs:
     with:
       test-name: unchained.test
       DEV_SERVER_HOSTNAME: dev.suite.sldev.cz
+      run-web: ${{ github.event_name == 'schedule' }}
+      run-webextension: false
 
   webextension-examples:
     needs: [build-deploy]
@@ -120,5 +122,5 @@ jobs:
     with:
       test-name: webextension-example.test
       DEV_SERVER_HOSTNAME: dev.suite.sldev.cz
-      run-webextension: true
+      run-webextension: ${{ github.event_name == 'schedule' }}
       run-web: false
