--- a/suite-common/wallet-utils/tsconfig.json
+++ b/suite-common/wallet-utils/tsconfig.json
@@ -24,6 +24,7 @@
             "path": "../../packages/blockchain-link-utils"
         },
         { "path": "../../packages/connect" },
+        { "path": "../../packages/device-utils" },
         { "path": "../../packages/urls" },
         { "path": "../../packages/utils" }
     ]
