--- a/suite-native/module-send/package.json
+++ b/suite-native/module-send/package.json
@@ -14,6 +14,7 @@
         "@react-navigation/native": "6.1.10",
         "@react-navigation/native-stack": "6.9.18",
         "@reduxjs/toolkit": "1.9.5",
+        "@suite-common/redux-utils": "workspace:*",
         "@suite-common/validators": "workspace:*",
         "@suite-common/wallet-config": "workspace:*",
         "@suite-common/wallet-core": "workspace:*",
@@ -22,9 +23,13 @@
         "@suite-native/accounts": "workspace:*",
         "@suite-native/atoms": "workspace:*",
         "@suite-native/device-manager": "workspace:*",
+        "@suite-native/device-mutex": "workspace:*",
         "@suite-native/formatters": "workspace:*",
         "@suite-native/forms": "workspace:*",
         "@suite-native/navigation": "workspace:*",
+        "@suite-native/toasts": "workspace:*",
+        "@trezor/connect": "workspace:*",
+        "@trezor/react-utils": "workspace:*",
         "@trezor/styles": "workspace:*",
         "bignumber.js": "^9.1.2",
         "react": "18.2.0",
