--- a/suite-native/module-send/tsconfig.json
+++ b/suite-native/module-send/tsconfig.json
@@ -3,6 +3,9 @@
     "compilerOptions": { "outDir": "libDev" },
     "references": [
         {
+            "path": "../../suite-common/redux-utils"
+        },
+        {
             "path": "../../suite-common/validators"
         },
         {
@@ -20,9 +23,13 @@
         { "path": "../accounts" },
         { "path": "../atoms" },
         { "path": "../device-manager" },
+        { "path": "../device-mutex" },
         { "path": "../formatters" },
         { "path": "../forms" },
         { "path": "../navigation" },
+        { "path": "../toasts" },
+        { "path": "../../packages/connect" },
+        { "path": "../../packages/react-utils" },
         { "path": "../../packages/styles" }
     ]
 }
