--- a/packages/connect-explorer-nextra/package.json
+++ b/packages/connect-explorer-nextra/package.json
@@ -38,6 +38,7 @@
         "redux": "^4.2.1",
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.4.2",
+        "remark-gfm": "^3.0.1",
         "styled-components": "^6.1.8"
     },
     "devDependencies": {
