--- a/.github/workflows/connect-release-init.yml
+++ b/.github/workflows/connect-release-init.yml
@@ -1,4 +1,6 @@
 name: "[Release] connect init"
+# TODO: this is still used by the GitLab workflow
+# TODO: let's leave it here until we are confident GitHub release works.
 
 on:
   workflow_dispatch:
