--- a/suite-common/token-definitions/tsconfig.json
+++ b/suite-common/token-definitions/tsconfig.json
@@ -2,7 +2,11 @@
     "extends": "../../tsconfig.base.json",
     "compilerOptions": { "outDir": "libDev" },
     "references": [
+        { "path": "../redux-utils" },
         { "path": "../wallet-config" },
-        { "path": "../wallet-types" }
+        { "path": "../wallet-types" },
+        { "path": "../../packages/connect" },
+        { "path": "../../packages/env-utils" },
+        { "path": "../../packages/type-utils" }
     ]
 }
