fix(connect-popup): test some additional wait

--- a/packages/connect-popup/tsconfig.json
+++ b/packages/connect-popup/tsconfig.json
@@ -16,8 +16,8 @@
         { "path": "../device-utils" },
         { "path": "../transport" },
         { "path": "../urls" },
+        { "path": "../utils" },
         { "path": "../node-utils" },
-        { "path": "../trezor-user-env-link" },
-        { "path": "../utils" }
+        { "path": "../trezor-user-env-link" }
     ]
 }
