refactor(suite-native): handleSubmit in native send form

--- a/suite-native/state/tsconfig.json
+++ b/suite-native/state/tsconfig.json
@@ -29,6 +29,7 @@
         { "path": "../feature-flags" },
         { "path": "../graph" },
         { "path": "../message-system" },
+        { "path": "../module-send" },
         { "path": "../module-settings" },
         { "path": "../storage" },
         { "path": "../toasts" },
