--- a/packages/connect-explorer/tsconfig.json
+++ b/packages/connect-explorer/tsconfig.json
@@ -12,8 +12,7 @@
     "include": [
         "next-env.d.ts",
         "**/*.ts",
-        "**/*.tsx",
-        "../connect-explorer-theme/src/components/CopyToClipboard.tsx"
+        "**/*.tsx"
     ],
     "references": [
         { "path": "../components" },
