--- a/packages/connect-explorer/package.json
+++ b/packages/connect-explorer/package.json
@@ -17,6 +17,7 @@
         "@codemirror/state": "^6.4.1",
         "@hbsnow/rehype-sectionize": "^1.0.7",
         "@sinclair/typebox": "^0.31.28",
+        "@trezor/analytics": "workspace:^",
         "@trezor/components": "workspace:^",
         "@trezor/connect": "workspace:^",
         "@trezor/connect-explorer-theme": "workspace:^",
@@ -38,6 +39,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-inspector": "^6.0.2",
+        "react-intl": "^6.6.2",
         "react-markdown": "^9.0.1",
         "react-redux": "8.0.7",
         "redux": "^4.2.1",
