--- a/.github/workflows/release-connect-v9-staging.yml
+++ b/.github/workflows/release-connect-v9-staging.yml
@@ -1,4 +1,4 @@
-name: "[Release] connect v9 init"
+name: "[Release] connect v9 staging"
 
 permissions:
   id-token: write # for fetching the OIDC token
@@ -31,7 +31,7 @@ jobs:
 
   check-version-match:
     runs-on: ubuntu-latest
-    needs: extract-version
+    needs: [extract-version]
     steps:
       - name: Check if version in package.json matches the one in branch name
         run: |
@@ -44,10 +44,11 @@ jobs:
             echo "The extracted version ($EXTRACTED_VERSION) does not match the version in the branch name ($BRANCH_VERSION)"
             exit 1 # Fail the job if versions don't match
           else
-            echo "Version check passed: $BRANCH_VERSION matches $EXTRACTED_VERSION
+            echo "Version check passed: $BRANCH_VERSION matches $EXTRACTED_VERSION"
 
   # This job deploys to staging-connect.trezor.io/9.x.x
   deploy-staging-semantic-version:
+    needs: [extract-version, check-version-match]
     environment: production
     name: "Deploying to staging-connect.trezor.io/${{ needs.extract-version.outputs.version }}"
     runs-on: ubuntu-latest
@@ -73,6 +74,7 @@ jobs:
 
   # This job deploys to staging-connect.trezor.io/9
   deploy-staging-v9:
+    needs: [extract-version, check-version-match]
     environment: production
     name: "Deploying to staging-connect.trezor.io/9"
     runs-on: ubuntu-latest
