--- a/suite-common/token-definitions/package.json
+++ b/suite-common/token-definitions/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@mobily/ts-belt": "^3.13.1",
+        "@reduxjs/toolkit": "^2.2.5",
         "@suite-common/redux-utils": "workspace:*",
         "@suite-common/wallet-config": "workspace:*",
         "@suite-common/wallet-types": "workspace:*",
