--- a/suite-native/device/package.json
+++ b/suite-native/device/package.json
@@ -16,7 +16,11 @@
         "@reduxjs/toolkit": "1.9.5",
         "@sentry/react-native": "5.22.3",
         "@suite-common/redux-utils": "workspace:*",
+        "@suite-common/suite-config": "workspace:*",
+        "@suite-common/wallet-config": "workspace:*",
         "@suite-common/wallet-core": "workspace:*",
+        "@suite-common/wallet-types": "workspace:*",
+        "@suite-common/wallet-utils": "workspace:*",
         "@suite-native/alerts": "workspace:*",
         "@suite-native/analytics": "workspace:*",
         "@suite-native/atoms": "workspace:*",
@@ -31,7 +35,9 @@
         "@trezor/connect": "workspace:*",
         "@trezor/device-utils": "workspace:*",
         "@trezor/styles": "workspace:*",
+        "bignumber.js": "^9.1.2",
         "lottie-react-native": "6.7.2",
+        "proxy-memoize": "2.0.2",
         "react": "18.2.0",
         "react-native": "0.74.1",
         "react-redux": "8.0.7",
