--- a/suite-native/device/tsconfig.json
+++ b/suite-native/device/tsconfig.json
@@ -6,7 +6,19 @@
             "path": "../../suite-common/redux-utils"
         },
         {
+            "path": "../../suite-common/suite-config"
+        },
+        {
+            "path": "../../suite-common/wallet-config"
+        },
+        {
             "path": "../../suite-common/wallet-core"
+        },
+        {
+            "path": "../../suite-common/wallet-types"
+        },
+        {
+            "path": "../../suite-common/wallet-utils"
         },
         { "path": "../alerts" },
         { "path": "../analytics" },
