--- a/.github/workflows/release-connect-bump-versions.yml
+++ b/.github/workflows/release-connect-bump-versions.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: true
+          token: ${{ secrets.TREZOR_BOT_TOKEN }}
 
       - name: Setup node
         uses: actions/setup-node@v4
@@ -31,6 +31,11 @@ jobs:
 
       - name: Install dependencies
         run: yarn install
+
+      - name: Setup Git config
+        run: |
+          git config --global user.name "trezor-ci"
+          git config --global user.email "${{ secrets.TREZOR_BOT_EMAIL }}"
 
       - name: Check dependencies to update
         run: |
