--- a/.github/workflows/release-connect-bump-versions.yml
+++ b/.github/workflows/release-connect-bump-versions.yml
@@ -38,5 +38,7 @@ jobs:
           git config --global user.email "${{ secrets.TREZOR_BOT_EMAIL }}"
 
       - name: Check dependencies to update
+        env:
+          GITHUB_TOKEN: ${{ secrets.TREZOR_BOT_TOKEN }}
         run: |
-          yarn tsx ./ci/scripts/connect-bump-versions.ts ${{ github.event.inputs.semver }}
+          node./ci/scripts/connect-bump-versions.js ${{ github.event.inputs.semver }}
