feat(suite-native): passphrase on receive
Update suite-native/intl/src/en.ts

Co-authored-by: Matěj Kříž <matej@matejkriz.cz>

--- a/suite-native/receive/tsconfig.json
+++ b/suite-native/receive/tsconfig.json
@@ -27,6 +27,7 @@
         { "path": "../intl" },
         { "path": "../link" },
         { "path": "../navigation" },
+        { "path": "../passphrase" },
         { "path": "../qr-code" },
         { "path": "../toasts" },
         { "path": "../../packages/connect" },
