--- a/suite-native/receive/package.json
+++ b/suite-native/receive/package.json
@@ -32,6 +32,7 @@
         "@suite-native/intl": "workspace:*",
         "@suite-native/link": "workspace:*",
         "@suite-native/navigation": "workspace:*",
+        "@suite-native/passphrase": "workspace:*",
         "@suite-native/qr-code": "workspace:*",
         "@suite-native/toasts": "workspace:*",
         "@trezor/connect": "workspace:*",
